--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,73 @@
-h1{
-font-family: "Mozilla Headline",
-    sans-serif;
-font-style: normal;
+body{
+    font-family: "Mozilla Headline",
+        sans-serif;
+        background-color: #272044;
+}
+
+
+header{
+background-image:  linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.2)),
+ url("../images/Humantay\ mountain.jpg");
+background-repeat: no-repeat;
+background-size: cover; 
+color: azure;
+text-align: center;
+padding: 200px 0;
+}
+header h1{
 font-weight: 700;
 font-size: 96px;
-line-height: 144px;
+line-height: 1;
+margin: 30px 0;
+
 }
+header h2{
+    font-weight: 400 ;
+    font-size: 40px;
+    line-height: 1.5;
+    margin: 0;
+}
+
+header h3{
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 1.5;
+    letter-spacing: 5px;
+    margin: 0;
+
+}
+header a{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.5 ;
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    background: azure;
+    text-decoration: none;
+    padding:16px 32px;
+    color: rgb(5, 5, 139);
+    margin-top: 32px;
+    display: inline-block;
+} 
+
+.container{
+max-width: 1300px;
+margin: 0 auto;
+}
+
+@media(max-width:800px){
+header{
+    padding: 60px 0; 
+}
+header h1{
+    font-size: 48px;
+}
+header h2{
+    font-size: 20px;
+}
+header h3{
+    font-size: 12px;
+}
+}
+
