--- a/src/styles.css
+++ b/src/styles.css
@@ -49,6 +49,7 @@ header a{
     color: rgb(5, 5, 139);
     margin-top: 32px;
     display: inline-block;
+    border-radius: 4px;
 } 
 
 .container{
@@ -75,6 +76,10 @@ padding: 30px;
 grid-gap: 0;
 }
 
+.card a{
+    border-radius: 4px;
+}
+
 .embed{
 width: 100%;
 aspect-ratio: 1/1;
@@ -94,8 +99,10 @@ text-align:center ;
 }
 .grid-2-columns{
     grid-template-columns: 1fr 1fr;
-    
+    align-items: start;
+     
 }
+
 .grid-3-columns-with-first-narrow{
 grid-template-columns: 1fr 2fr 2fr;
 }
@@ -106,7 +113,8 @@ grid-template-columns: 1fr 2fr 2fr;
 
 .img-responsive{
 max-width: 100%;
-    border-radius: 6px;
+  border-radius: 6px;
+  display: block;
 }
 .img-responsive-1 {
     max-width: 100%;
